--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,12 +2,14 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.wiwj.wxrecord"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -29,7 +31,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile group: 'dom4j', name: 'dom4j', version: '1.6.1'
+    compile files('libs/dom4j-1.6.1.jar')
     compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.8.1'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
 }
