--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     compile 'net.zetetic:android-database-sqlcipher:3.5.4@aar'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -31,6 +31,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile files('libs/dom4j-1.6.1.jar')
-    compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.8.1'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
+    compile 'com.squareup.okhttp3:okhttp:3.8.1'
+    compile 'com.google.code.gson:gson:2.8.0'
+    implementation files('libs/ojdbc6-11.1.0.7.0.jar')
 }
